# apertium-sme-deu

./: .gitattributes  AUTHORS  CITATION  CITATION.cff  Makefile.am  README  apertium-sme-deu.deu-sme.lsx  apertium-sme-deu.sme-deu.dix  apertium-sme-deu.sme-deu.lex  apertium-sme-deu.sme-deu.lrx  apertium-sme-deu.sme-deu.lsx  apertium-sme-deu.sme-deu.rtx  configure.ac  gt2apertium.cg3r  modes.xml  oversatt.txt  sme-deu-corpus.txt
test/: konvens-2022.txt  sme-deu-disam-expected.txt  sme-deu-disam2-expected.txt  sme-deu-input.txt  sme-deu-lex-expected.txt  sme-deu-morph-expected.txt  sme-deu-postgen-expected.txt  sme-deu-postgen-gold.txt  sme-deu-transfer-expected.txt  tests.json
texts/: prnpers-tests.text  story.sme.text
